# Copyright (c) 2015 Aaron Power
# Use of this source code is governed by the MIT/APACHE2.0 license that can be
# found in the LICENCE-{APACHE, MIT} file.
[package]
authors = ["Aaronepower <theaaronepower@gmail.com>"]
description = "An ORM for DuckDuckGo."
homepage = "https://github.com/Aaronepower/ddg"
include = ["src/**/*", "build.rs", "Cargo.toml", "LICENCE-APACHE.md", "LICENCE-MIT.md"]
license = "MIT/Apache-2.0"
name = "ddg"
readme = "README.md"
repository = "https://github.com/Aaronepower/ddg.git"
version = "0.3.0"

[dependencies]
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"

[dependencies.reqwest]
version = "0.4"
optional = true

[dependencies.hyper]
version = "0.10"
optional = true

[features]
default = ["reqwest"]
