# Copyright (c) 2015 Aaron Power
# Use of this source code is governed by the MIT/APACHE2.0 license that can be
# found in the LICENCE-{APACHE, MIT} file.
[package]
authors = ["Aaronepower <theaaronepower@gmail.com>"]
description = "An ORM for DuckDuckGo."
homepage = "https://github.com/Aaronepower/ddg"
include = ["src/**/*", "build.rs", "Cargo.toml", "LICENCE-APACHE.md", "LICENCE-MIT.md"]
license = "MIT/Apache-2.0"
name = "ddg"
readme = "README.md"
repository = "https://github.com/Aaronepower/ddg.git"
version = "0.4.1"

[dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1"

[dependencies.reqwest]
version = "0.6"
